python
List - []
mutable storage for value 
 a= [1,2,3,4,5,6,7,8]
a.append[1] adds a value to the end  of a list
del a[3] – delete based on index postion value from a specified list 


tuple - ()
immutable value brackets , cannot be appened/deleted




Python 3.8.10 (default, Jun 22 2022, 20:18:18) 
[GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 'abc' * 5
'abcabcabcabcabc'
>>> a = [1,2,3,4,5,6,7,8,9]
>>> a[0]
1
>>> a[-1]
9
>>> a = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16]
>>> a[-1]
16
>>> a[0]
1
>>> a.append(7)
>>> a
[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 7]
>>> del a[3]
>>> del a[3]
>>> a
[1, 2, 3, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 7]
>>> a=5
>>> b=6
>>> print ('a: b:')
a: b:
>>> print ('a:{} b:{}')
a:{} b:{}
>>> print ('a:{} b:{}'.format (a,b)))
  File "<stdin>", line 1
    print ('a:{} b:{}'.format (a,b)))
                                    ^
SyntaxError: unmatched ')'
>>> print ('a:{} b:{}'.format (a,b))
a:5 b:6
>>> a = 'Binding of'
>>> b= 'Issac'
>>> print ('a:{} b:{}'.format (a,b))
a:Binding of b:Issac
>>> print ('The{} Of{}'.format (a,b))
TheBinding of OfIssac
>>> a = 'Binding '
>>> print ('The{} Of{}'.format (a,b))
TheBinding  OfIssac
>>> print ('The {} Of{}'.format (a,b))
The Binding  OfIssac
>>> print ('The {}Of {}'.format (a,b))
The Binding Of Issac
>>> 
KeyboardInterrupt
>>> 

